# mcp-exec

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/: CODEOWNERS  release.yml
.github/workflows/: docker-publish.yml  rust.yml  typos.yml
nixos/: mcp-secure-exec.nix
src/: config.rs  error.rs  main.rs  server.rs  tool.rs
tests/: integration_tests.rs
