[package]
name = "mcp-secure-exec"
version = "0.1.1"
edition = "2024"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/timasoft/mcp-secure-exec"
description = "MCP server for executing user-defined shell commands via templates"
keywords = ["mcp", "exec", "shell", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.4.0", features = [
    "server",
    "transport-streamable-http-server",
] }
axum = "0.8.8"
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
governor = "0.10.4"
serde = { version = "1.0.220" }
serde_json = "1.0.142"
clap = { version = "4.5.35", features = ["derive", "env"] }
anyhow = "1.0.99"
thiserror = "2.0.14"
regex = "1.11.5"
shell-words = "1.1.0"
which = "8.0.2"
unicode-normalization = "0.1.24"
urlencoding = "2.1.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.21", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.14"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
overflow-checks = true
debug = false
